--- a/src/main/resources/locales/messages_en.yml
+++ b/src/main/resources/locales/messages_en.yml
@@ -1,7 +1,17 @@
 message:
-  test: "Test Message!"
   help:
-    - "Help Message 1"
-    - "Help Message 2"
-  last-page: "This is the last page"
-  first-page: "This is the first page"
+    - "&8&l━━━━━━━━━━━━━━━━━━━━━━━[━━&d&lCAD&8&l━━]━━━━━━━━━━━━━━━━━━━━━━━"
+    - ""
+    - "&d/cad reload &f- &7Reloads the plugin."
+    - "&d/cad menu &f- &7Opens the main menu."
+    - "&d/cad new &7(&dtitle &7(separated with ;) &ddescription&7)  &f- &7Creates a new advertisement."
+    - "&d/cad remove &7(&did&7) &f- &7Removes the advertisement"
+    - ""
+    - "&8&l━━━━━━━━━━━━━━━━━━━━━━━[━━&d&lCAD&8&l━━]━━━━━━━━━━━━━━━━━━━━━━━"
+  first-page: "&d&lCAD &8| &cYou are already on the first page!"
+  last-page: "&d&lCAD &8| &cYou are already on the last page!"
+  reload: "&d&lCAD &8| &aI have successfully reloaded the files!"
+  reached-max-ads: "&d&lCAD &8| &cYou have reached the maximum limit!"
+  new-usage: "&d&lCAD &8| &cYou need to separate the title and the description with ';'!"
+  not-exists: "&d&lCAD &8| &cThere is no ad with this id!"
+  successful-remove: "&d&lCAD &8| &aYou have successfully removed this ad!"
